# rnn-viz

./: .eslintignore  .eslintrc.cjs  Justfile  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.js
dot-server/: Dockerfile  Justfile  README.md  app.py  requirements.txt
notes/: 2022-06-18.txt  2022-06-20.txt
py/: SparseRegularizer.py  custom_rnn_test.ipynb
py/tf/: AmeoActivation.py  CustomRNN.py
py/tg/: CustomRNN.py  ameo_activation.py  custom_rnn.py  custom_rnn_test.ipynb  driver.py  glorot_normal.py  notes.txt  objective.py  sparse_regularizer.py  validate.py
solver/: Cargo.toml  enumerated_truth_tables_binary.txt
solver/src/: 3_input_bool_minimal.txt  boolean.rs  main.rs  three_input_complexities.rs
src/: .gitignore  index.css  sentry.ts  util.ts
src/components/: FunctionComplexityPlot.svelte  LossPlot.svelte  OutputPlot.svelte
src/data/: functionComplexityDistr-uniform.json  functionComplexityDistr.json
src/engine/: Cargo.toml  Justfile
src/engine/src/: batch_activation.rs  lib.rs  linear_separability.rs  training_data.rs
src/nn/: ComposedRegularizer.ts  QuantizationRegularizer.ts  RNN.ts  SparseRegularizer.ts  ameoActivation.ts  ameoTestbed.ts  customRNN.ts  gcuActivation.ts  tfjs.ts
src/routes/: +layout.svelte  +page.svelte  __layout.svelte  activationPlot.svelte  ameoActivationTest.svelte  binaryActivation.svelte  classificationDemo.svelte  functionComplexity.svelte  index.svelte  rnn.svelte  ternary.svelte  train.svelte  voxelViz.svelte
src/viz/: Node.ts  NodeGroup.ts  RNNViz.ts  conf.ts  pixi.ts
(+43 files in other folders)
