[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = { version = "0.11", features = ["static-link-z3"], optional = true }
rand = "0.8"
rand_distr = "0.4"
boolean_expression = "0.4"
itertools = "0.10"

[features]
z3-support = ["z3"]
